--- a/generators/theme/templates/layout.html.erb
+++ b/generators/theme/templates/layout.html.erb
@@ -6,6 +6,6 @@
       <%%= theme_stylesheet_link_tag '<%= file_name %>' %>
    </head>
    <body>
-      <%%= @content_for_layout %>
+      <%= yield %>
    </body>
 </html>
